fixed the problem with the extra margin in mobile view

--- a/app/components/presenter/components/control-panel/control-panel.scss
+++ b/app/components/presenter/components/control-panel/control-panel.scss
@@ -11,7 +11,6 @@ $control-panel-font-color-active: #fff;
 .control-panel-container {
 	display: flex;
 	flex-direction: row;
-	min-height: 100px;
 	color: $control-panel-font-color;
 	background-color: $control-panel-background-color;
 	z-index: 99;
@@ -20,9 +19,8 @@ $control-panel-font-color-active: #fff;
 
 	@media screen and (max-width: 767px) {
 		flex-wrap: wrap;
-
+		width: 100%;
 	}
-
 
 	.control-panel {
 		cursor: pointer;
@@ -32,12 +30,17 @@ $control-panel-font-color-active: #fff;
 		align-items: center;
 		justify-content: center;
 		flex-direction: column;
-		padding: 20px;
+		padding: 15px;
+		font-size: 12px;
 		flex-grow: 2;
 		transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
 		&:hover {
 			box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+		}
+
+		@media screen and (max-width: 767px) {
+			font-size: 10px;
 		}
 	}
 
@@ -47,7 +50,6 @@ $control-panel-font-color-active: #fff;
 	}
 
 	.disabled {
-		color: #dddddd;
 		cursor: not-allowed;
 		pointer-events: none;
 		opacity: .65;
